# ToolsPackages

./: mp3dec.7z
AAC_DEMO/: .cproject  .project  CMakeLists.txt  IFeelItComing_HEAACv2_11.025K_2ch_1mn.aac  README  aac_dump.raw
AAC_DEMO/aac/: CMakeLists.txt
AAC_DEMO/aac/dec/: CMakeLists.txt
AAC_DEMO/aac/enc/: CMakeLists.txt
AAC_DEMO/aac_test/dec_test/: aacdec_test.c  drcModel.c  drcModel.h
AAC_DEMO/aac_test/enc_test/: aac-enc.c
CMAKE/01.helloword/: CMakeLists.txt
CMAKE/01.helloword/src/: demo.c
CMAKE/02.project/: CMakeLists.txt
CMAKE/02.project/demo_src/: CMakeLists.txt  demo.c
CMAKE/02.project/interface/: CMakeLists.txt
CMAKE/02.project/interface/ADD/: CMakeLists.txt  add.c
CMAKE/02.project/interface/DIV/: CMakeLists.txt  div.c  div.h
CMAKE/02.project/interface/MUL/: CMakeLists.txt  mul.c  mul.h
CMAKE/02.project/interface/SUB/: CMakeLists.txt  sub.c  sub.h
CMAKE/02.project/script/: config.h.in
G726_demo/src/: Makefile  adpcm_g726  bit_operations.h  bitstream.h  floating_fudge.h  g711.h  g726.c  g726.h  g726_tests.c  test_utils.c  test_utils.h  testbin
G726_demo/test-data/: Makefile
G726_demo/test-data/etsi/: Makefile
G726_demo/test-data/etsi/fax/: Makefile
G726_demo/test-data/itu/: Makefile
G726_demo/test-data/itu/fax/: Makefile
G726_demo/test-data/local/: Makefile
G726_mini/: Makefile  decodedpcm  g711.h  g726.c  g726.h  g726_bit_ops.h  g726_bitstream.c  g726_bitstream.h  g726_tests.c  testbin  testpcm
function_def/: Makefile  def.c  def.h  test.c  testbin
misc/: audio.txt  get_audio_data_from_txt.c
mp3decoder/: Makefile  dump  mp3dec_test.c  mp3reader.c  mp3reader.h  pvmp3_alias_reduction.c  pvmp3_audio_type_defs.h  pvmp3_dequantize_sample.c  pvmp3_framedecoder.c  pvmp3_get_scale_factors.c  pvmp3_mpeg2_stereo_proc.c  pvmp3_stereo_proc.c  pvmp3_tables.c  pvmp3_tables.h  s_huffcodetab.h  small.h  testbin
test/: 01_list.c  bin
